# custom-physics-engine

./: .gitignore  AABB_8cpp.html  AABB_8cpp__incl.map  AABB_8cpp__incl.md5  AABB_8cpp_source.html  AABB_8h.html  AABB_8h.js  AABB_8h__dep__incl.map  AABB_8h__dep__incl.md5  AABB_8h__incl.map  AABB_8h__incl.md5  AABB_8h_source.html  AppSettings_8cpp.html  AppSettings_8cpp__incl.map  AppSettings_8cpp__incl.md5  AppSettings_8cpp_source.html  AppSettings_8h.html  AppSettings_8h__dep__incl.map  AppSettings_8h__dep__incl.md5  AppSettings_8h__incl.map  AppSettings_8h__incl.md5  AppSettings_8h_source.html  AstronomyPresets_8cpp.html  AstronomyPresets_8cpp.js  AstronomyPresets_8cpp__incl.map  AstronomyPresets_8cpp__incl.md5  AstronomyPresets_8cpp_source.html  AstronomyPresets_8h.html  AstronomyPresets_8h.js  AstronomyPresets_8h__dep__incl.map  AstronomyPresets_8h__dep__incl.md5  AstronomyPresets_8h_source.html  Axis_8h.html  Axis_8h.js  Axis_8h__dep__incl.map  Axis_8h__dep__incl.md5  Axis_8h_source.html  BVH_8cpp.html  BVH_8cpp__incl.map  BVH_8cpp__incl.md5  (+2312 more)
.github/workflows/: doxygen.yml
assets/scenes/: SampleSolver.json  SmallSolarSystem.json
glad/include/glad/: glad.h
glad/src/: glad.c
graphics/: Camera.cpp  Camera.h  Gizmo.cpp  Gizmo.h  IDrawable.h  MathUtils.cpp  MathUtils.h  Mesh.cpp  Mesh.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Shader.h  TranslateHandle.cpp  TranslateHandle.h
graphics/components/: ComputeShader.cpp  ComputeShader.h  Gizmo.cpp  Gizmo.h  Mesh.cpp  Mesh.h  RotateHandle.cpp  RotateHandle.h  ScaleHandle.cpp  ScaleHandle.h  Shader.cpp  Shader.h  TranslateHandle.cpp  TranslateHandle.h
graphics/core/: Camera.cpp  Camera.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneObject.cpp  SceneObject.h  SceneObjectOptions.h  SceneSerializer.cpp  SceneSerializer.h  UniformBuffer.cpp  UniformBuffer.h
graphics/interfaces/: ICollider.h  IDrawable.h  IHandle.h  IPhysicsBody.h  IPickable.h
graphics/utils/: MathUtils.cpp  MathUtils.h
physics/: PhysicsBody.cpp  PhysicsBody.h  PhysicsSystem.cpp  PhysicsSystem.h  PointMass.cpp  PointMass.h  RigidBody.cpp  RigidBody.h
physics/bounding/: AABB.cpp  AABB.h  BoxCollider.cpp  BoxCollider.h
physics/solver/: InterceptSolver.h  OneUnknownSolver.cpp  OneUnknownSolver.h  ProblemRouter.cpp  ProblemRouter.h  VectorRootSolver.cpp  VectorRootSolver.h
scripts/: build-linux.sh  run-linux.sh  setup-linux.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+98 more)
shaders/: meshIntersection.comp
shaders/gizmo/: gizmo.frag  gizmo.vert
shaders/primitive/: primitive.frag  primitive.vert
src/: main.cpp
src/graphics/components/: Axis.h  ComputeShader.cpp  ComputeShader.h  Gizmo.cpp  Gizmo.h  IHandle.h  Mesh.cpp  Mesh.h  RotateHandle.cpp  RotateHandle.h  ScaleHandle.cpp  ScaleHandle.h  Shader.h  TranslateHandle.cpp  TranslateHandle.h
src/graphics/core/: Camera.cpp  Camera.h  IDrawable.h  IPickable.h  InstanceData.h  PathTraceRenderer.cpp  PathTraceRenderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneObject.cpp  SceneObject.h  SceneObjectOptions.h  SceneSerializer.cpp  UniformBuffer.cpp  UniformBuffer.h
src/graphics/debug/: Colliders.cpp  Colliders.h  Forces.cpp  Forces.h  PathTraces.cpp  PathTraces.h
src/graphics/presets/: AstronomyPresets.cpp  AstronomyPresets.h  ScenePresets.cpp  ScenePresets.h
src/graphics/raytrace/: SceneRayTracer.cpp  SceneRayTracer.h  TriangleBvh.cpp  TriangleBvh.h
src/graphics/utils/: MathUtils.cpp  MathUtils.h
src/math/: MathUtils.h  Ray.h
src/physics/: Constants.h  Material.h  PhysicsBody.cpp  PhysicsBody.h  PhysicsSystem.cpp  PhysicsSystem.h  PointMass.cpp  PointMass.h  RigidBody.cpp  RigidBody.h  ThermalProperties.h
src/physics/bounding/: AABB.cpp  AABB.h  BoxCollider.cpp  BoxCollider.h  ICollider.h
src/physics/solver/: ISolver.h  InterceptSolver.cpp  InterceptSolver.h  OneUnknownSolver.h  ProblemRouter.cpp  ProblemRouter.h  VectorRootSolver.cpp  VectorRootSolver.h
src/physics/spatial/: BVH.cpp  BVH.h  NodeIndex.h  Octree.cpp  Octree.h
src/physics/utils/: ThermalUtils.cpp  ThermalUtils.h
src/scripts/: generate-docs.bat  include_qt.sh  run-linux.sh
src/ui/: AppSettings.cpp  AppSettings.h  FrameGraphCanvas.cpp  FrameGraphCanvas.h  FrameGraphWidget.cpp  FrameGraphWidget.h  HierarchyWidget.cpp  HierarchyWidget.h  InspectorRow.cpp  InspectorWidget.cpp  InspectorWidget.h  MainWindow.cpp  MainWindow.h  OpenGLWindow.cpp  OpenGLWindow.h  RawInputFilter.cpp  RawInputFilter.h  ScalarWidget.cpp  ScalarWidget.h  SnapshotTableModel.cpp  SnapshotTableModel.h  SolverDialog.h  Vector3Widget.cpp  Vector3Widget.h
src/ui/graph/: FrameGraphCanvas.cpp  FrameGraphCanvas.h  FrameGraphPanel.cpp  FrameGraphPanel.h  FrameGraphWidget.cpp  FrameGraphWidget.h  Metric.h
src/ui/inspector/: ForcesInspectorWidget.cpp  ForcesInspectorWidget.h  GlobalsInspectorWidget.cpp  GlobalsInspectorWidget.h  IInspectorSection.h  InspectorRow.cpp  InspectorRow.h  InspectorWidget.cpp  InspectorWidget.h  PhysicsInspectorWidget.cpp  PhysicsInspectorWidget.h  ThermalInspectorWidget.cpp  ThermalInspectorWidget.h  TransformInspectorWidget.cpp  TransformInspectorWidget.h
src/ui/settings/: CameraSettingsGroup.cpp  (+15 more)
tests/: CMakeLists.txt  PhysicsTests.cpp  TESTING.md
ui/: HierarchyWidget.cpp  HierarchyWidget.h  InspectorRow.cpp  InspectorRow.h  InspectorWidget.cpp  InspectorWidget.h  MainWindow.cpp  MainWindow.h  OpenGLWindow.cpp  OpenGLWindow.h  RawInputFilter.cpp  RawInputFilter.h  SnapshotTableModel.cpp  SnapshotTableModel.h  SolverDialog.cpp  SolverDialog.h
(+9 files in other folders)
